# Mailing_management_service

./: .env.sample  README.md  groups.json  mailing_interface_app.json  manage.py  pyproject.toml
Mailing_management_service/: settings.py  urls.py
Mailing_management_service/Mailing_management_service/: asgi.py  settings.py  urls.py  wsgi.py
blog_app/: forms.py  models.py  urls.py  views.py
blog_app/migrations/: 0001_initial.py  0002_alter_blog_options_blog_owner.py  0003_alter_blog_published_at.py
mailing_interface_app/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailing_interface_app/migrations/: 0001_initial.py  0002_alter_clientservice_options.py  0003_alter_message_slug.py  0004_alter_sendingmailset_sending_time.py  0005_alter_sendingmailset_message_and_more.py  0006_remove_sendingmailset_client_service_and_more.py  0007_alter_sendingmailset_first_sending_date.py  0008_remove_sendtry_client_service_and_more.py  0009_remove_sendingmailset_sending_time_and_more.py  0010_rename_sending_status_sendtry_status.py  0011_sendingmailset_is_active.py  0012_alter_sendingmailset_options.py  0013_sendingmailset_owner.py  0014_clientservice_owner.py  0015_alter_message_user.py
mailing_interface_app/templatetags/: my_tags.py
users_app/: admin.py  forms.py  models.py  urls.py  views.py
users_app/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_name_and_more.py  0003_user_token.py  0004_user_user_id.py  0005_alter_user_user_id.py  0006_remove_user_user_id.py  0007_alter_user_is_active.py  0008_alter_user_options.py
(+30 files in other folders)
