[tool.poetry]
name = "mailing-management-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.2"
pillow = "^10.3.0"
ipython = "^8.25.0"
psycopg2 = "^2.9.9"
black = "^24.4.2"
pytils = "^0.4.1"
shell = "^1.0.1"
django-apscheduler = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
